--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
   <title>GT-Center</title>
    <style>
       h1{
-        color: black;
+        color: red;
         text-align: center;
       }
+     
       nav ul li {
         display: inline-block;
         margin: 10px;
+        ;
 
       }
       img {
