--- a/index.html
+++ b/index.html
@@ -2,38 +2,9 @@
 <html lang="en">
 <head>
   <title>GT-Center</title>
-   <style>
-      h1{
-        color: red;
-        text-align: center;
-      }
-     
-      nav ul li {
-        display: inline-block;
-        margin: 10px;
-        ;
-
-      }
-      img {
-        width: 500px;
-
-      }
-      h2{
-        color: gold;
-      }
-      body{
-        background-color: #C6F0EF;
-      }
-      p{
-        color: black;
-
-      }
-      a{
-        color: red ;
-      }
-      </style>
+<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="bg">
   <header>
     <h1>(GTC) Gamma Training Center </h1> 
     <nav>
@@ -74,8 +45,8 @@
     <artical></artical>
   </main>
   <footer> 
-    <p>&copy; 2021 </p> 
+    <p id="copy">&copy; 2021 </p> 
     </footer>
-    <script src="js/script.js"></script>
+    <script  src="js/script.js"></script>
 </body>
 </html>
